--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "start": "ts-node src"
   },
   "dependencies": {
+    "@koa/cors": "^3.3.0",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^10.1.1",
+    "@types/koa__cors": "^3.3.0",
     "axios": "^0.27.2",
     "form-data": "^4.0.0",
     "koa": "^2.13.4",
@@ -30,6 +32,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/koa": "^2.13.4",
     "@types/koa-better-body": "^3.3.3",
     "@types/koa-bodyparser": "^4.3.7",
@@ -37,7 +40,6 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.35",
     "@types/uuid": "^8.3.4",
-    "@types/jest": "^27.5.1",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
