--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@koa/multer": "^3.0.0",
     "@koa/router": "^10.1.1",
     "@types/koa__cors": "^3.3.0",
+    "@types/sharp": "^0.30.2",
     "axios": "^0.27.2",
     "form-data": "^4.0.0",
     "koa": "^2.13.4",
@@ -28,6 +29,7 @@
     "pg": "^8.7.3",
     "png-to-jpeg": "^1.0.1",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.30.5",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
